# AOasisBot

./: .env.example  .gitignore  Dockerfile  Procfile  pyproject.toml  requirements.txt
aoasisbot/: main.py  models.py  mongo_connection.py  parsing.py
aoasisbot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_aoasisbot.py
